Android/IFCViewerAndroid/distribution/ifcengine/include/engine.h

//
//		CreateModel
//
//				int64_t				returns						OUT
//
//		This function creates and empty model.
//		References inside to other ontologies will be included.
//		A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	CreateModel(
								);
	
//
//		OpenModel
//				char				* fileName					IN
//
//				int64_t				returns						OUT
//
//		This function opens the model on location fileName.
//		References inside to other ontologies will be included.
//		A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	OpenModel(
									const char		* fileName
								);
//
//		OpenModelW
//				wchar_t				* fileName					IN
//
//				int64_t				returns						OUT
//
//		This function opens the model on location fileName.
//		References inside to other ontologies will be included.
//		A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	OpenModelW(
									const wchar_t	* fileName
								);
//
//		OpenModelS
//				void				* callback					IN
//
//				int64_t				returns						OUT
//
//		This function opens the model via a stream.
//		References inside to other ontologies will be included.
//		A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	OpenModelS(
									void			* callback
								);
void		DECL STDC	ImportModel(
									int64_t			model,
									const char		* fileName
								);
void		DECL STDC	ImportModelW(
									int64_t			model,
									const wchar_t	* fileName
								);
void		DECL STDC	ImportModelS(
									int64_t			model,
									void			* callback
								);
//
//		SaveInstanceTree
//				int64_t				owlInstance					IN
//				const char			* fileName					IN
//
//		This function saves the current model on location fileName.
//
int64_t		DECL STDC	SaveInstanceTree(
									int64_t			owlInstance,
									const char		* fileName
								);
//
//		CloseSession
//
//		This function closes the session, after this call the kernel cannot be used anymore.
//
int64_t		DECL STDC	CloseSession(
								);
void		DECL STDC	CleanMemory(
								);
void		DECL STDC	ClearCache(
									int64_t			model
								);
int64_t		DECL STDC	GetModel(
									int64_t			owlInstance
								);
//
//		GetSmoothness
//				int64_t				owlInstance					IN
//				int64_t				* degree					IN / OUT
//
//				int64_t				returns						OUT
//
//		This function returns the smoothness of a line or surface.
//		In case the smoothness can be defined the degree will get assigned either
//			0 - continuous curve / surface (i.e. degree 9)
//			1 - the direction of the curve / surface is gradually changing (i.e. degree 1)
//			2 - the change of direction of the curve / surface is gradually changing (i.e. degree 2)
//		In return value of this function retuns the dimension of the found smoothness:
//			0 - smoothness could not be defined
//			1 - found the smoothness of a curve
//			2 - found the smoothness of a surface
//
int64_t		DECL STDC	GetSmoothness(
									int64_t			owlInstance,
									int64_t			* degree
								);
//
//		OrderedHandles
//				int64_t				model						IN
//				int64_t				* classCnt					IN / OUT
//				int64_t				* propertyCnt				IN / OUT
//				int64_t				* instanceCnt				IN / OUT
//				int64_t				setting						IN
//				int64_t				mask						IN
//
//	This call can be used in two ways. The optional arguments classCnt,
//	propertyCnt and instanceCnt can be used to get the total amount of active classes,
//	properies and instances available within the model.
//
//	The setting and mask can be used to order the handles given for classes,
//	properties and instances.
//		1 - if set this will number all classes with possible values [1 .. classCnt]
//		2 - if set this will number all classes with possible values [1 .. propertyCnt]
//		4 - if set this will number all classes with possible values [1 .. instanceCnt]
//	Note: when enabling ordered handles be aware that classes, properties and instances
//		  can share the same handles, using the correct argument cannot be checked anymore
//		  by the library itself. This could result in crashes in case of incorrect assignments
//		  by the hosting application.
//	Note: internally there is no performance gain / loss. This is purely meant for situations
//		  where the hosting application can benefit performance wise from having an ordered list.
//	Note: use in combination with other libraries is not adviced, i.e. when combined with the
//		  IFC generation from the IFC Engine component for example
//	
void		DECL STDC	OrderedHandles(
									int64_t			model,
									int64_t			* classCnt,
									int64_t			* propertyCnt,
									int64_t			* instanceCnt,
									int64_t			setting,
									int64_t			mask
								);
//
//		OrderedHandles
//				int64_t				model						IN
//				int64_t				owlInstance					IN
//
//	This call will integrate the current state information into the model.
//
//	Model should be non-zero.
//
//	If owlInstance is given the state is only applied on the owlInstance and all its children.
//	If owlInstance is zero the state is applied on all owlInstances within a model.
//
void		DECL STDC	AddState(
									int64_t			model,
									int64_t			owlInstance
								);
void		DECL STDC	PeelArray(
									void			** inValue,
									void			** outValue,
									int64_t			elementSize
								);