C#/StreamingSTPInOut-CS/StreamingIFCInOut-CS/STEPEngine.cs


		//
		//		GetSmoothness                               (http://rdf.bg/gkdoc/CS64/GetSmoothness.html)
		//
		//	This function returns the smoothness of a line or surface.
		//	In case the smoothness can be defined the degree will get assigned either
		//		0 - continuous curve / surface (i.e. degree 9)
		//		1 - the direction of the curve / surface is gradually changing (i.e. degree 1)
		//		2 - the change of direction of the curve / surface is gradually changing (i.e. degree 2)
		//	In return value of this function retuns the dimension of the found smoothness:
		//		0 - smoothness could not be defined
		//		1 - found the smoothness of a curve
		//		2 - found the smoothness of a surface
		//
        [DllImport(STEPEngineDLL, EntryPoint = "GetSmoothness")]
        public static extern Int64 GetSmoothness(Int64 owlInstance, out Int64 degree);

		//
		//		AddState                                    (http://rdf.bg/gkdoc/CS64/AddState.html)
		//
		//	This call will integrate the current state information into the model.
		//
		//	Model should be non-zero.
		//
		//	If owlInstance is given the state is only applied on the owlInstance and all its children.
		//	If owlInstance is zero the state is applied on all owlInstances within a model.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "AddState")]
        public static extern void AddState(Int64 model, Int64 owlInstance);

		//
		//		GetModel                                    (http://rdf.bg/gkdoc/CS64/GetModel.html)
		//
		//
        [DllImport(STEPEngineDLL, EntryPoint = "GetModel")]
        public static extern Int64 GetModel(Int64 owlInstance);

		//
		//		OrderedHandles                              (http://rdf.bg/gkdoc/CS64/OrderedHandles.html)
		//
		//	This call can be used in two ways. The optional arguments classCnt,
		//	propertyCnt and instanceCnt can be used to get the total amount of active classes,
		//	properies and instances available within the model.
		//
		//	The setting and mask can be used to order the handles given for classes,
		//	properties and instances.
		//		1 - if set this will number all classes with possible values [1 .. classCnt]
		//		2 - if set this will number all classes with possible values [1 .. propertyCnt]
		//		4 - if set this will number all classes with possible values [1 .. instanceCnt]
		//
		//	Note: when enabling ordered handles be aware that classes, properties and instances
		//		  can share the same handles, using the correct argument cannot be checked anymore
		//		  by the library itself. This could result in crashes in case of incorrect assignments
		//		  by the hosting application.
		//	Note: internally there is no performance gain / loss. This is purely meant for situations
		//		  where the hosting application can benefit performance wise from having an ordered list.
		//	Note: use in combination with other libraries is not adviced, i.e. when combined with the
		//		  IFC generation from the IFC Engine component for example
		//
        [DllImport(STEPEngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, out Int64 classCnt, out Int64 propertyCnt, out Int64 instanceCnt, Int64 setting, Int64 mask);

        [DllImport(STEPEngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, out Int64 classCnt, out Int64 propertyCnt, IntPtr instanceCnt, Int64 setting, Int64 mask);

        [DllImport(STEPEngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, out Int64 classCnt, IntPtr propertyCnt, out Int64 instanceCnt, Int64 setting, Int64 mask);

        [DllImport(STEPEngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, out Int64 classCnt, IntPtr propertyCnt, IntPtr instanceCnt, Int64 setting, Int64 mask);

        [DllImport(STEPEngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, IntPtr classCnt, out Int64 propertyCnt, out Int64 instanceCnt, Int64 setting, Int64 mask);

        [DllImport(STEPEngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, IntPtr classCnt, out Int64 propertyCnt, IntPtr instanceCnt, Int64 setting, Int64 mask);

        [DllImport(STEPEngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, IntPtr classCnt, IntPtr propertyCnt, out Int64 instanceCnt, Int64 setting, Int64 mask);

        [DllImport(STEPEngineDLL, EntryPoint = "OrderedHandles")]
        public static extern void OrderedHandles(Int64 model, IntPtr classCnt, IntPtr propertyCnt, IntPtr instanceCnt, Int64 setting, Int64 mask);

		//
		//		PeelArray                                   (http://rdf.bg/gkdoc/CS64/PeelArray.html)
		//
		//	This function introduces functionality that is missing or complicated in some programming languages.
		//	The attribute inValue is a reference to an array of references. The attribute outValue is a reference to the same array,
		//	however a number of elements earlier or further, i.e. number of elements being attribute elementSize. Be aware that as
		//	we are talking about references the offset is depending on 32 bit / 64 bit compilation.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "PeelArray")]
        public static extern void PeelArray(ref byte[] inValue, out byte outValue, Int64 elementSize);

		//
		//		CloseSession                                (http://rdf.bg/gkdoc/CS64/CloseSession.html)
		//
		//	This function closes the session, after this call the geometry kernel cannot be used anymore.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "CloseSession")]
        public static extern Int64 CloseSession();

		//
		//		CleanMemory                                 (http://rdf.bg/gkdoc/CS64/CleanMemory.html)
		//
		//		This function ..
		//
        [DllImport(STEPEngineDLL, EntryPoint = "CleanMemory")]
        public static extern void CleanMemory();

		//
		//		ClearCache                                  (http://rdf.bg/gkdoc/CS64/ClearCache.html)
		//
		//		This function ..
		//
        [DllImport(STEPEngineDLL, EntryPoint = "ClearCache")]
        public static extern void ClearCache(Int64 model);

        //
        //  File IO API Calls
        //

		//
		//		CreateModel                                 (http://rdf.bg/gkdoc/CS64/CreateModel.html)
		//
		//	This function creates and empty model.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "CreateModel")]
        public static extern Int64 CreateModel();

		//
		//		OpenModel                                   (http://rdf.bg/gkdoc/CS64/OpenModel.html)
		//
		//	This function opens the model on location fileName.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "OpenModel")]
        public static extern Int64 OpenModel(string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "OpenModel")]
        public static extern Int64 OpenModel(byte[] fileName);

		//
		//		OpenModelW                                  (http://rdf.bg/gkdoc/CS64/OpenModelW.html)
		//
		//	This function opens the model on location fileName.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "OpenModelW")]
        public static extern Int64 OpenModelW(string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "OpenModelW")]
        public static extern Int64 OpenModelW(byte[] fileName);

		//
		//		OpenModelS                                  (http://rdf.bg/gkdoc/CS64/OpenModelS.html)
		//
		//	This function opens the model via a stream.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "OpenModelS")]
        public static extern Int64 OpenModelS([MarshalAs(UnmanagedType.FunctionPtr)] ReadCallBackFunction callback);

		//
		//		OpenModelA                                  (http://rdf.bg/gkdoc/CS64/OpenModelA.html)
		//
		//	This function opens the model via an array.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "OpenModelA")]
        public static extern Int64 OpenModelA(byte[] content, Int64 size);

		//
		//		ImportModel                                 (http://rdf.bg/gkdoc/CS64/ImportModel.html)
		//
		//	This function imports a design tree on location fileName.
		//	The design tree will be added to the given existing model.
		//	The return value contains the first instance not referenced by any other instance or zero 
		//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
		//	unique and equal to the instance used within the call SaveInstanceTree().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "ImportModel")]
        public static extern Int64 ImportModel(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "ImportModel")]
        public static extern Int64 ImportModel(Int64 model, byte[] fileName);

		//
		//		ImportModelW                                (http://rdf.bg/gkdoc/CS64/ImportModelW.html)
		//
		//	This function imports a design tree on location fileName.
		//	The design tree will be added to the given existing model.
		//	The return value contains the first instance not referenced by any other instance or zero 
		//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
		//	unique and equal to the instance used within the call SaveInstanceTree().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "ImportModelW")]
        public static extern Int64 ImportModelW(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "ImportModelW")]
        public static extern Int64 ImportModelW(Int64 model, byte[] fileName);

		//
		//		ImportModelS                                (http://rdf.bg/gkdoc/CS64/ImportModelS.html)
		//
		//	This function imports a design tree via a stream.
		//	The design tree will be added to the given existing model.
		//	The return value contains the first instance not referenced by any other instance or zero 
		//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
		//	unique and equal to the instance used within the call SaveInstanceTree().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "ImportModelS")]
        public static extern Int64 ImportModelS(Int64 model, [MarshalAs(UnmanagedType.FunctionPtr)] ReadCallBackFunction callback);

		//
		//		ImportModelA                                (http://rdf.bg/gkdoc/CS64/ImportModelA.html)
		//
		//	This function imports a design tree via an array.
		//	The design tree will be added to the given existing model.
		//	The return value contains the first instance not referenced by any other instance or zero 
		//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
		//	unique and equal to the instance used within the call SaveInstanceTree().
		//
        [DllImport(STEPEngineDLL, EntryPoint = "ImportModelA")]
        public static extern Int64 ImportModelA(Int64 model, byte[] content, Int64 size);
